<resources>
    <string name="app_name">EstrazioneBase</string>
    <string name="title">Estrattore di Base</string>

    <string name="help">Per iniziare, avviare la Generazione di Vettori.\nVerranno generati 10 vettori in R⁵.</string>
    <string name="hint">Valore massimo delle componenti:</string>
    <string name="info">Cosa sto per fare?</string>
    <string name="info2">Cosa sto facendo?</string>
    <string name="start_gen">Genera Vettori</string>
    <string name="gauss">Avvia l\'algoritmo</string>
    <string name="results">Visualizza Matrice</string>
    <string name="reset">Riavvia Estrazione</string>
    <string name="tableTitle">Matrice portata a Scala con il Metodo di Gauss.\nGli elementi Pivot sono evidenziati in rosso.</string>
    <string name="credits">Creato da Andrés Cocever</string>

    <string name="desc">Questa semplice app si propone di estrarre la base, avvalendosi del teorema di estrazione di una base da un insieme di 10 vettori definiti in 5 dimensioni.\n\nIl teorema di estrazione di base ha il seguente enunciato: \"Sia V uno Spazio Vettoriale finitamente generato su un campo K e sia {v1, …, vk} un insieme di generatori. Allora esiste una base B sottoinsieme di {v1, …, vk}.\"\n\nViene utilizzato il metodo di Eliminazione di Gauss-Jordan per portare la matrice a scala.\nInfatti, avremo che i vettori generati corrispondenti alle colonne della matrice a scala che contengono i pivot sono linearmente indipendenti, e che questi compongono quindi una base per lo spazio in 5 dimensioni.\n\nViene lasciata all\'utente la possibilità di specificare un valore, compreso tra 1 e 9, che indicherà il valore massimo che ciascuna componente dei vettori potrà assumere.</string>
    <string name="scrollAlert">Puoi scorrere in basso sul testo di questa schermata!</string>
    <string name="back">Torna alla Home</string>
</resources>