<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/dark_aqua"

    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/googlesansbold"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/board"
        android:layout_marginTop="75dp"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/infoView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:fontFamily="@font/googlesansregular"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_marginTop="350dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="630dp"
        >

        <Button
            android:id="@+id/infoBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="@string/info"
            android:layout_marginRight="5dp"
            android:fontFamily="@font/googlesansregular"
            />
        <Button
            android:id="@+id/genBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:text="@string/start_gen"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/googlesansregular"
            />
        <Button
            android:id="@+id/gaussBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:text="@string/gauss"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/googlesansregular"
            android:visibility="gone"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credits"
        android:fontFamily="@font/googlesansregular"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:layout_marginTop="700dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="10dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>