<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/dark_aqua"

    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:fontFamily="@font/googlesansbold"
        android:textColor="@color/white"
        android:textSize="27sp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/board"
        android:layout_marginTop="75dp"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/infoView"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:text="@string/desc"
        android:fontFamily="@font/googlesansregular"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textAlignment="gravity"
        android:layout_marginTop="350dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_centerHorizontal="true"
        android:justificationMode="inter_word"
        android:scrollbars="vertical"
        android:fadeScrollbars="false"
        android:maxLines="60"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:gravity="center">

        <Button
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="@string/back"
            android:fontFamily="@font/googlesansregular"
            android:layout_marginBottom="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credits"
            android:fontFamily="@font/googlesansregular"
            android:textColor="@color/white"
            android:textSize="12sp"/>
    </LinearLayout>

</RelativeLayout>